[package]
name = "serde-nebula-fbthrift-graphv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
nebula-fbthrift-graph-v2 = "0.2.0"
serde = "1.0.149"
nebula-fbthrift-common-v2 = "0.2.0"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_repr = "0.1"
float-cmp = "0.9.0"